# NachoBot

./: .gitignore  Cargo.toml  Dockefile  Dockerfile  README.md  data.json  help_content.json  message_template.json  metadata.json  nacho_links.json
.github/workflows/: deploy.yml
data_storage/: ASFSF_data.json  ASFSF_metadata.json  KASPER_data.json  KASPER_metadata.json  KSPR_data.json  KSPR_metadata.json  NACHO_data.json  NACHO_metadata.json  NONE_data.json  NONE_metadata.json  TESLA_data.json  TESLA_metadata.json  TNACHO_data.json  TNACHO_metadata.json
src/: datatweaks.rs  imports.rs  main.rs  result_struct.rs
src/commands/: donate.rs  help.rs  holder.rs  links.rs  status.rs
src/data_storage/: DFGH_data.json  DFGH_metadata.json  KSPR_data.json  KSPR_metadata.json  NACHO_metadata.json  PIPI_data.json  PIPI_metadata.json
src/holder_status/: datatweaks.rs
src/mint_status/: datatweaks.rs
