[package]
name = "nacho_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.12"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
warp = "0.3"
log = "0.4"
env_logger = "0.9"
urlencoding = "2.1"