[package]
name = "nacho_bot"
version = "0.4.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = "0.12"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
urlencoding = "2.1"
rand = "0.8"
chrono = "0.4"